Fix sizing issue where operator button and container sizes made buttons too small

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,9 @@ body, html {
     width: 40px;
     flex-shrink: 0;
     border-radius: 5px;
+    border-style: groove;
+
+    background-color: rgb(9, 84, 151); 
 
 }
 
@@ -136,7 +139,8 @@ body, html {
 
     /* margin-right: 10px; */
 
-    width: 64px;
+    /* width: 64px; */
+    width: 71px;
     height: 50px;
 }
 
@@ -148,7 +152,8 @@ body, html {
     justify-content: space-between;
     margin-left: auto;
 
-    width: 75.43px;
+    /* width: 75.43px; */
+    /* width: 71px; */
     height: 400px;
 }
 
@@ -162,7 +167,9 @@ body, html {
     /* margin: 10px; */
     background: purple;
 
-    width: 64px;
+    /* flex-shrink: 0 0 0; */
+
+    width: 71px;
     height: 50px;
 }
 
@@ -183,10 +190,6 @@ body, html {
     display: flex;
     flex-direction: column;
     margin: 0px;
-}
-
-p {
-    margin: 10px 0px 0px 0px;
 }
 
 ul {
@@ -264,12 +267,25 @@ li {
 .operator,
 .redButton {
     border-radius: 8px;
-    padding-left: 7px;
+    /* padding-left: 7px; */
 
     box-shadow: -3px 3px 10px 4px rgb(59, 59, 59);
+
+    flex-direction: column;
 
     
 
     
     /* border-style: solid; */
+}
+
+.bump {
+    display: flex;
+    flex: auto;
+
+}
+
+p {
+    /* margin: 10px 0px 0px 0px; */
+    margin: 0px 0px 0px 7px;
 }
